--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html {
 	font-family: "Neuton", serif;
 	font-weight: 400;
 	font-style: normal;
+	font-size: 27px;
 }
 
 .neuton-bold {
@@ -123,6 +124,9 @@ nav ul li:hover a {
 	nav ul li a {
 		font-size: 15px;
 	}
+	.neuton-regular {
+		font-size: 18px;
+	}
 }
 
 /*Responsive Design*/
@@ -141,7 +145,7 @@ nav ul li:hover a {
 		padding: 7px;
 	}
 	.neuton-regular {
-		font-size: 35px;
+		font-size: 22px;
 	}
 }
 
