--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
-  height: 100%;
-  width: 100%;
+	height: 100%;
+	width: 100%;
 }
  /* BASIC CSS */
 .alex-brush-regular {
@@ -33,19 +33,62 @@ header {
 	background-color: #731f1a;
 	color: #fff;
 	padding: 10px;
+
 	display: flex;
 	align-items: center;
 	text-align: center;
 }
+
 #logo {
 	width: 180px;
 	cursor: pointer; 
 	margin-right: 10px;
 }
 
+#info-menu {
+	display: none; /* Hide the menu on small screens */
+	flex-direction: column; /* Stack vertically */
+	position: absolute;
+	z-index: 999;
+	top: 80px;
+	right: 2%;
+	background-color: rgba(242, 233, 225, 0.9);
+	width: 150px;
+	
+}
+#info-menu.show-menu {
+	display: flex;
+}
+#info-menu p {
+	text-decoration: none;
+	transition: background-color 0.4s ease; 
+}
+#info-menu p a {
+	text-decoration: none;
+	font-size: 20px;
+	color: #333; 
+}
+#info-menu p:hover{
+	background-color:#731f1a
+}
+#info-menu p:hover a {
+	color: white;
+	transition: color 0.4s ease;
+}
+
+#menu-btn {
+	cursor: pointer;
+	visibility: visible;
+	position: absolute; right: 5%;
+
+}
+ #sticky{
+	 position: sticky;
+ }
+
 /* NAV BAR */
 nav {
-	position: sticky;
+	 position: sticky;
 	top: 0;
 	background-color: #f2e9e1;
 	padding: 10px;
@@ -107,7 +150,7 @@ nav ul li:hover a {
 
 
 /*Responsive Design*/
-@media only screen and (max-width: 428px) {
+@media only screen and (max-width: 465px) {
 	.alex-brush-regular {
 		font-size: 30px;
 	}
@@ -128,9 +171,7 @@ nav ul li:hover a {
 		font-size: 18px;
 	}
 }
-
-/*Responsive Design*/
-@media only screen and (min-width: 429px) and (max-width: 600px) {
+@media only screen and (min-width: 465.01px) and (max-width: 660px) {
 	.alex-brush-regular {
 		font-size: 35px;
 	}
@@ -150,7 +191,7 @@ nav ul li:hover a {
 }
 
 
-@media only screen and (min-width: 601px) {
+@media only screen and (min-width: 660.01px) {
 	.alex-brush-regular {
 		font-size: 45px;
 	}
