--- a/style.css
+++ b/style.css
@@ -33,8 +33,9 @@ header {
 	background-color: #731f1a;
 	color: #fff;
 	padding: 10px;
-
 	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 	align-items: center;
 	text-align: center;
 }
@@ -45,20 +46,36 @@ header {
 	margin-right: 10px;
 }
 
-#info-menu {
-	display: none; /* Hide the menu on small screens */
-	flex-direction: column; /* Stack vertically */
-	position: absolute;
-	z-index: 999;
-	top: 80px;
-	right: 2%;
-	background-color: rgba(242, 233, 225, 0.9);
-	width: 150px;
-	
-}
-#info-menu.show-menu {
+.dropdown {
+	position: relative;
 	display: flex;
 }
+.menu-btn {
+	visibility: visible;
+	cursor: pointer;
+	position: absolute; right: 10%;
+	bottom: -10px;
+	border: none;
+}
+.menu-content {
+	display: none;
+	position: absolute;
+	flex-direction: column; 
+	top: 10px;
+	right: -1%;
+	background-color: rgba(242, 233, 225, 0.9);
+	width: 130px;
+	z-index: 1;
+}
+.menu-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+
+.dropdown:hover .menu-content {display: block;}
+
 #info-menu p {
 	text-decoration: none;
 	transition: background-color 0.4s ease; 
@@ -73,22 +90,12 @@ header {
 }
 #info-menu p:hover a {
 	color: white;
-	transition: color 0.4s ease;
 }
 
-#menu-btn {
-	cursor: pointer;
-	visibility: visible;
-	position: absolute; right: 5%;
-
-}
- #sticky{
-	 position: sticky;
- }
 
 /* NAV BAR */
 nav {
-	 position: sticky;
+	position: sticky;
 	top: 0;
 	background-color: #f2e9e1;
 	padding: 10px;
@@ -141,8 +148,8 @@ nav ul li:hover a {
 	text-align: center;
 }
 .catalog-item img{
-	width: 200px;
-	max-height: 270px;
+	width: 230px;
+	max-height: 370px;
 }
 .catalog-item:hover {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
